# auth-microservices-system

./: .env_example  README.md  docker-compose.yml
apigateway/: .env.example  Dockerfile  README.md  pyproject.toml  qr_code.html
apigateway/apigateway/: main.py
apigateway/apigateway/api/: dependencies.py
apigateway/apigateway/api/routes/: account.py  admin.py  auth.py  user.py
apigateway/apigateway/clients/: users_client.py
apigateway/apigateway/core/: config.py  http_client.py  security.py
apigateway/apigateway/domain/: schemas.py  types.py
apigateway/apigateway/services/: account_service.py  admin_service.py  auth_service.py  user_service.py
apigateway/tests/: conftest.py
apigateway/tests/integration/: test_account.py  test_admin.py  test_auth.py  test_user.py
apigateway/tests/unit/: test_dependencies.py  test_http_client.py
apigateway/tests/unit/services/: test_auth_service.py  test_user_service.py
docs/: index.html
docs/apigateway/: class_index.html  function_index.html  index.html  status.json  z_7e44e17b0a5e3b3d_account_service_py.html  z_7e44e17b0a5e3b3d_admin_service_py.html  z_7e44e17b0a5e3b3d_auth_service_py.html  z_7e44e17b0a5e3b3d_user_service_py.html  z_902e513d50d6dc4f_users_client_py.html  z_a54e6d33b555aff0_config_py.html  z_a54e6d33b555aff0_http_client_py.html  z_a54e6d33b555aff0_security_py.html  z_a6120b255ca62d92_account_py.html  z_a6120b255ca62d92_admin_py.html  z_a6120b255ca62d92_auth_py.html  z_a6120b255ca62d92_user_py.html  z_c5ee9c0d035de0bd_dependencies_py.html  z_d99955f31d8a6b0f_schemas_py.html  z_d99955f31d8a6b0f_types_py.html
docs/users/: class_index.html  function_index.html  index.html  status.json  z_1fdb07a711209d26___init___py.html  z_1fdb07a711209d26_account_service_py.html  z_1fdb07a711209d26_auth_service_py.html  z_1fdb07a711209d26_email_service_py.html  z_35ddf920789517a5___init___py.html  z_35ddf920789517a5_config_py.html  z_35ddf920789517a5_database_py.html  z_35ddf920789517a5_exceptions_py.html  z_35ddf920789517a5_security_py.html  z_7ee12b5738466136___init___py.html  z_7ee12b5738466136_user_repository_py.html  z_9325d9b71ffa110a___init___py.html  z_9325d9b71ffa110a_dependencies_py.html  z_9325d9b71ffa110a_error_handlers_py.html  z_b8825c5c00d5ae02___init___py.html  z_b8825c5c00d5ae02_models_py.html  z_b8825c5c00d5ae02_schemas_py.html  z_f6c68bdc9becfc1e___init___py.html  z_f6c68bdc9becfc1e_main_py.html  z_fb4fe4114c38851d___init___py.html  z_fb4fe4114c38851d_account_py.html  z_fb4fe4114c38851d_auth_py.html
nginx/: default.conf
users/: .env_example  Dockerfile  README.md  pyproject.toml
users/tests/: conftest.py
users/tests/integration/: test_account.py  test_auth.py  test_system.py
users/tests/unit/core/: test_config_and_dependencies.py  test_security.py
users/tests/unit/domain/: test_schemas.py
users/tests/unit/services/: test_account_service.py  test_auth_service.py  test_email_service.py
users/users/: main.py
users/users/api/: dependencies.py  error_handlers.py  router.py  routes.py
users/users/api/routes/: account.py  auth.py
users/users/core/: config.py  database.py  email.py  exceptions.py  security.py
users/users/domain/: models.py  schemas.py
users/users/respositories/: user_repository.py
users/users/services/: account_service.py  auth_service.py  email_service.py  user_service.py
