[project]
name = "apigateway"
version = "0.1.0"
description = ""
authors = [
    {name = "Damian Kowalczyk",email = "damiankowalczyk3688@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "pyotp (>=2.9.0,<3.0.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
respx = "^0.22.0"
freezegun = "^1.5.0"
mypy = "^1.19.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = "."
addopts = "-ra -q --cov=apigateway --cov-report=term-missing --cov-report=html --cov-fail-under=100"


[tool.coverage.run]
source = ["apigateway"]
branch = true
omit = [
    "apigateway/main.py",
    "*/__init__.py"
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
