[project]
name = "users"
version = "0.1.0"
description = ""
authors = [
    {name = "Damian Kowalczyk",email = "damiankowalczyk3688@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "beanie (>=2.0.1,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "passlib[argon2] (>=1.7.4,<2.0.0)",
    "fastapi-mail (>=1.6.1,<2.0.0)",
    "pyotp (>=2.9.0,<3.0.0)",
    "qrcode (>=8.2,<9.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
